# ratsnest

./: README.md  pyproject.toml
ratsnest/: config.py  main.py  parser.py  startup.py
ratsnest/agent/: __init__.py  notes.py  todos.py
tests/: test_config.py  test_main.py  test_parser.py  test_ratsnest.py
tests/files/: note_with_todos.md  todo.md
