[tool.poetry]
name = "ratsnest"
version = "0.1.0"
description = ""
authors = ["Justin Kaldenbach <kaldejm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mistune = "2.0.0rc1"
watchdog = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
